--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,7 +11,7 @@ body {
 }
 /* ============= Animation background ========= */
 .background {
-  background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
+  background: linear-gradient(132deg, #FC415A, #603f8b, #000000);
   background-size: 400% 400%;
   animation: Gradient 15s ease infinite;
   position: relative;
