--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,12 +14,14 @@ body {
   background: linear-gradient(132deg, #FC415A, #603f8b, #000000);
   background-size: 400% 400%;
   animation: Gradient 15s ease infinite;
-  position: relative;
+  position: fixed;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
-  padding:0;
+  padding: 1rem;;
   margin:0px;
+  top: 0;
+  left: 0;
 }
 .cube {
   position: absolute;
