--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,3 +34,14 @@ footer{
     background-color:#00000088;
     color: white; 
 }
+
+.background {
+    width: 100%;
+    height: 100vh;
+    background: url('./Images/background.gif') no-repeat center center;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
